# rmarc

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  contest.py  mkdocs.yml  perfmatch.md  pyproject.toml  pyrightconfig.json  tox.ini
.benchmarks/Windows-CPython-3.14-64bit/: 0001_python_baseline.json  0002_baseline.json  0003_step1_rust_codec.json  0004_step2_rust_marc8.json  0005_step2_integrated.json  0006_0006_before_fast_field.json  0007_0007_fast_field_construction.json  0008_0008_fast_field_plus_intern.json
.claude/: settings.local.json
.github/workflows/: build_wheels.yml  ci.yml  matrix.yml  publish_to_pypi.yml  release.yml
bench/: bench_contest.py  bench_core.py  bench_deathmatch.py  bench_json_xml.py  conftest.py  generate_data.py
docs/: code-review.md  index.md  requirements.txt
pymarc_src/: .gitlab-ci.yml  README.md  apply_headers.py  pyproject.toml
pymarc_src/pymarc/: __init__.py  __init__.pyi  exceptions.py  field.py  leader.py  marc8.py  marcjson.py  marcxml.py  reader.py  record.py  writer.py
pymarc_src/test/: test_encode.py  test_field.py  test_json.py  test_marc8.py  test_reader.py  test_record.py  test_writer.py  test_xml.py
python/rmarc/: __init__.py  _compat.py  _rmarc.pyi  constants.py  exceptions.py  field.py  leader.py  marc8.py  marcjson.py  marcxml.py  reader.py  record.py  writer.py
sample_app/: cli.py  loc.py  sample_integration_test.sh  store.py
sample_app/docs/: developer_guide.md  rmarc_patterns.md  user_guide.md
sample_app/tests/: conftest.py  test_cli.py  test_loc.py  test_store.py
sample_src/: Makefile
sample_src/sample_app/: README.md  pyproject.toml
sample_src/sample_app/docs/: index.md
sample_src/sample_app/sample_app/: __init__.py  __main__.py  cli.py  goodreads.py  loc.py  store.py  ui.py
sample_src/sample_app/sample_app/data/: sample.csv
sample_src/sample_app/tests/: conftest.py  test_cli.py  test_goodreads.py  test_loc.py  test_store.py
spec/: benchmarks.md  code_review_report.md  phase1.md  phase2.md  phase3_rustification.md  phase4_performance.md  phase5_code_review.md  phase6_fast_serialization.md  rust-speedup-tour.md
src/: lib.rs  marc8.rs  marc8_mapping.rs  marc_codec.rs
test_pymarc/: __init__.py  test_bugs.py  test_encode.py  test_fast_serialization.py  test_field.py  test_json.py  test_leader.py  test_marc8.py  test_ordered_fields.py  test_reader.py  test_record.py  test_regressions.py  test_smoke.py  test_suite1.py  test_suite2.py  test_suite3.py  test_suite4.py  test_suite5.py  test_suite6.py  test_suite_marc8.py  test_utf8.py  test_writer.py  test_xml.py
tests/: test_smoke.py
