[project]
name = "sample-app"
version = "0.1.0"
description = "BookShelf — a personal book collection manager powered by rmarc (dogfooding sample app)."
readme = "README.md"
authors = [{ name = "Matthew Martin", email = "matthewdeanmartin@gmail.com" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "rmarc",
]

[project.scripts]
bookshelf = "sample_app.cli:main"
bookshelf-gui = "sample_app.ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
rmarc = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "B", "C", "S", "SIM", "I"]
ignore = ["S101"]
